rabbitmq/rabbitmq.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  namespace: rabbitmq-ws
  name: admin-ui
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ws-management.c4-soft.com
      secretName: ws-management-tls
  rules:
  - host: ws-management.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: websockets
            port:
              number: 15672
---
apiVersion: v1
kind: Service
metadata:
  namespace: rabbitmq-ws
  name: amqp-expose
  annotations:
    loadbalancer.ovhcloud.com/class: iolb
spec:
  ports:
  - appProtocol: amqp
    name: amqp
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app.kubernetes.io/name: websockets
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
